# qtnavigator

./: .travis.yml  CMakeLists.txt  README.md  box  lb  version.h.in
cmake/: CompilerOptions-gcc.cmake  ExternGmock.cmake  Gcc.cmake  Toolchain_gcc-48.cmake  Toolchain_gcc.cmake
data/gshhs/: wdb_rivers_c.b
plugins/TestPlugin/: CMakeLists.txt  TestPlugin.cpp  TestPlugin.hpp
src/: CMakeLists.txt  ChartModel.cpp  ChartModel.hpp  MainWindow.cpp  MainWindow.hpp  MapWidget.cpp  MapWidget.hpp  Registry.cpp  Registry.hpp  main.cpp
src/action/: About.cpp  About.hpp  AboutQt.cpp  AboutQt.hpp  ExitApplication.cpp  ExitApplication.hpp  Fullscreen.cpp  Fullscreen.hpp  ZoomIn.cpp  ZoomIn.hpp  ZoomOut.cpp  ZoomOut.hpp
src/chart/: Chart.cpp  Chart.hpp  Factory.cpp  Factory.hpp  FactoryRegistry.cpp  FactoryRegistry.hpp  ModelEntry.hpp  Renderer.cpp  Renderer.hpp
src/chart/gshhs/: Chart.cpp  Chart.hpp  Factory.cpp  Factory.hpp  Point.cpp  Point.hpp  Polygon.cpp  Polygon.hpp  Reader.cpp  Reader.hpp  Renderer.cpp  Renderer.hpp
src/geo/: Position.cpp  Position.hpp
src/global/: Registry.cpp  Registry.hpp
src/plugin/: DefaultManager.cpp  DefaultManager.hpp  Manager.hpp
src/plugin_core/: CMakeLists.txt  Manager.hpp  Plugin.cpp  Plugin.hpp  Renderer.hpp
src/plugins/: DefaultManager.cpp  DefaultManager.hpp  Manager.hpp  Plugin.hpp
src/plugins/TestPlugin/: CMakeLists.txt  TestPlugin.cpp  TestPlugin.hpp  TestPlugin.json
src/utils/: endian.hpp  range.cpp  range.hpp
src_extern/: README.md
src_extern/gmock-1.7.0/: CMakeLists.txt  custom_main.cpp  global.hpp
src_test/: CMakeLists.txt
src_test/chart/gshhs/: Test_Reader.cpp
src_test/geo/: Test_Position.cpp
